--- a/1.html
+++ b/1.html
@@ -5,16 +5,55 @@
     <meta charset="utf-8">
 </head>
 
+<p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE?si=VIgwSqNbg2pTEnOJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</p>
 <body>
-    <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="index.html"></a></h1>
     <ol>
-        <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html">CSS</a></li>
-        <li><a href="3.html">JavaScript</a></li>
+        <li><a href="1.html"></a>HTML</li>
+        <li><a href="2.html"></a>CSS</li>
+        <li><a href="3.html"></a>JavaScript</li>
     </ol>
-    <h2> HTML이란 무엇인가? </h2> 
+    <h2> CSS란 무엇인가? </h2> 
     <a href="https://www.advancedwebranking.com/seo/html-study" target="_blank"> HTML 자주 쓰이는 랭킹 </a> Hello Malan Juwon. <strong> Malan Juwon <u> Bolsal </u> </strong> is very Malan.
     <p>I changed the line but its not working on the page
     <img src="Coding.jpg" width="100%">
+<p>
+    <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://new-78wuaehiqq.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
+<p>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/662ec2911ec1082f04e87874/1hsjag2j0';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+</p>
 </body>
 </html>
