--- a/2.html
+++ b/2.html
@@ -11,9 +11,9 @@
 <body>
     <h1><a href="index.html"></a></h1>
     <ol>
-        <li><a href="1.html"></a>HTML</li>
-        <li><a href="2.html"></a>CSS</li>
-        <li><a href="3.html"></a>JavaScript</li>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
     </ol>
     <h2> CSS란 무엇인가? </h2> 
     <a href="https://www.advancedwebranking.com/seo/html-study" target="_blank"> HTML 자주 쓰이는 랭킹 </a> Hello Malan Juwon. <strong> Malan Juwon <u> Bolsal </u> </strong> is very Malan.
