--- a/1.html
+++ b/1.html
@@ -4,6 +4,15 @@
     <title> MalanJuwon </title>
     <meta charset="utf-8">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R54J9J03BH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R54J9J03BH');
+</script>
 
 <p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE?si=VIgwSqNbg2pTEnOJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -14,6 +23,7 @@
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
+        <li><a href="bbqchicken_Copy.html">bbq_copy</a></li>
     </ol>
     <h2> CSS란 무엇인가? </h2> 
     <a href="https://www.advancedwebranking.com/seo/html-study" target="_blank"> HTML 자주 쓰이는 랭킹 </a> Hello Malan Juwon. <strong> Malan Juwon <u> Bolsal </u> </strong> is very Malan.
