--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <title> MalanJuwon </title>
     <meta charset="utf-8">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R54J9J03BH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R54J9J03BH');
+</script>
 
 <p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE?si=VIgwSqNbg2pTEnOJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
